attempt two at fixing spacing in process

--- a/css/main_v1.2.css
+++ b/css/main_v1.2.css
@@ -967,8 +967,8 @@ footer a:hover {
   .process_title {
     margin-bottom: 0px;
     border-right: none;
-    padding-right: 15px;
-    width: 300px;
+    padding-right: 50px;
+    width: 85%;
     height: auto;
     margin-right: 60px;
     flex-basis: 10%;
